URL.nopathname -> URL.origin

--- a/index.html
+++ b/index.html
@@ -772,7 +772,7 @@ This provides overlapping functionality with the <a href="http://url.spec.whatwg
 
 <ul>
 <li><code>href</code>, <code>protocol</code>, <code>host</code>, <code>hostname</code>, <code>port</code>, <code>pathname</code>, <code>search</code>, <code>hash</code> <strong>(Standard)</strong>  </li>
-<li><code>nopathname</code>, <code>basepath</code>, <code>base</code>, <code>nosearch</code>, <code>nohash</code> <strong>(Extensions)</strong> <br />
+<li><code>origin</code>, <code>basepath</code>, <code>base</code>, <code>nosearch</code>, <code>nohash</code> <strong>(Extensions)</strong> <br />
 The URL object also has the <code>resolve(relativeURL)</code> method which performs a
 fast conversion of a relative URL to absolute, using itself for the <code>baseURL</code>.</li>
 </ul></li>
