--- a/index.html
+++ b/index.html
@@ -766,13 +766,13 @@ Many of these are also available for external use if appropriate.
 The most useful of these are in the <code>Meeko.DOM</code> namespace, and include </p>
 
 <ul>
-<li><p><code>Meeko.DOM.URL</code>
+<li><p><code>Meeko.URL</code>
 This provides overlapping functionality with the <a href="http://url.spec.whatwg.org/#api">proposed URL API</a>. 
-<code>Meeko.DOM.URL(absoluteURL)</code> will return a URL object with the following (read-only) fields:  </p>
+<code>Meeko.URL(absoluteURL)</code> will return a URL object with the following (read-only) fields:  </p>
 
 <ul>
 <li><code>href</code>, <code>protocol</code>, <code>host</code>, <code>hostname</code>, <code>port</code>, <code>pathname</code>, <code>search</code>, <code>hash</code> <strong>(Standard)</strong>  </li>
-<li><code>origin</code>, <code>basepath</code>, <code>base</code>, <code>nosearch</code>, <code>nohash</code> <strong>(Extensions)</strong> <br />
+<li><code>origin</code>, <code>basepath</code>, <code>base</code>, <code>filename</code>, <code>nosearch</code>, <code>nohash</code> <strong>(Extensions)</strong> <br />
 The URL object also has the <code>resolve(relativeURL)</code> method which performs a
 fast conversion of a relative URL to absolute, using itself for the <code>baseURL</code>.</li>
 </ul></li>
